tests/negative/runtime/glyphat_negative_index/input.ci
void main() {
    print(glyphAt("abc", -1) + "\n");
}
